可运行但是不完善的登录

--- a/chess.vcxproj.filters
+++ b/chess.vcxproj.filters
@@ -122,5 +122,8 @@
     <ClInclude Include="Textbox.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="account.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
