--- a/chess.vcxproj
+++ b/chess.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="Textbox.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="account.h" />
     <ClInclude Include="ai.h" />
     <ClInclude Include="animation.h" />
     <ClInclude Include="atlas.h" />
