--- a/chess.vcxproj
+++ b/chess.vcxproj
@@ -126,8 +126,61 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-
-  <ItemGroup></ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="account.cpp" />
+    <ClCompile Include="ai.cpp" />
+    <ClCompile Include="board.cpp" />
+    <ClCompile Include="button.cpp" />
+    <ClCompile Include="chess_client.cpp" />
+    <ClCompile Include="chess_manager.cpp" />
+    <ClCompile Include="chess_piece.cpp" />
+    <ClCompile Include="chess_pieces.cpp" />
+    <ClCompile Include="chess_server.cpp" />
+    <ClCompile Include="listview.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="option_selector.cpp" />
+    <ClCompile Include="resources_manager.cpp" />
+    <ClCompile Include="scene_manager.cpp" />
+    <ClCompile Include="Textbox.cpp" />
+    <ClCompile Include="text_input.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="account.h" />
+    <ClInclude Include="ai.h" />
+    <ClInclude Include="animation.h" />
+    <ClInclude Include="atlas.h" />
+    <ClInclude Include="board.h" />
+    <ClInclude Include="button.h" />
+    <ClInclude Include="camera.h" />
+    <ClInclude Include="chess_client.h" />
+    <ClInclude Include="chess_manager.h" />
+    <ClInclude Include="chess_piece.h" />
+    <ClInclude Include="chess_pieces.h" />
+    <ClInclude Include="chess_server.h" />
+    <ClInclude Include="game_scene.h" />
+    <ClInclude Include="hello_scene.h" />
+    <ClInclude Include="httplib.h" />
+    <ClInclude Include="listview.h" />
+    <ClInclude Include="login_scene.h" />
+    <ClInclude Include="menu_scene.h" />
+    <ClInclude Include="myinfo_scene.h" />
+    <ClInclude Include="online_scene.h" />
+    <ClInclude Include="option_selector.h" />
+    <ClInclude Include="pause_scene.h" />
+    <ClInclude Include="ranklist_scene.h" />
+    <ClInclude Include="register_scene.h" />
+    <ClInclude Include="resources_manager.h" />
+    <ClInclude Include="scene.h" />
+    <ClInclude Include="scene_manager.h" />
+    <ClInclude Include="select_scene.h" />
+    <ClInclude Include="setting_scene.h" />
+    <ClInclude Include="static_image.h" />
+    <ClInclude Include="Textbox.h" />
+    <ClInclude Include="text_input.h" />
+    <ClInclude Include="timer.h" />
+    <ClInclude Include="util.h" />
+    <ClInclude Include="vector2.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
